# rulesenigne

./: .gitignore  Dockerfile  Jenkinsfile  README.md  pyproject.toml
.github/: release.yaml
build_image/: Jenkinsfile
pytests/: test_authorize_UN_RE.py  test_check_r402.py  test_decomment_xml.py  test_dreml_get_list_of_dml_files.py  test_get_cfg_array_exceptions.py  test_get_cfg_multiset_base_tables.py  test_get_cfg_rules_exceptions.py  test_get_cfg_techdebt_exclusions.py  test_get_uncleared_techdebt.py  test_read_the_input_filenames_from_xml_file.py  test_rule_urls.py  test_set_database_num.py  test_set_project_name.py  test_split_value_from_line.py
scripts/: adhoc-perms
un_re/: BUILD  ERROR_NUMBERS.py  KNOWN_DB.py  add_thread_log_to_main_log.py  antlr_compile_grammar.py  antlr_create_lib_dir.py  antlr_create_logs_dir.py  antlr_get_jar_file.py  antlr_parse_stmt.py  antlr_set_env_vars.py  antlr_show_context.py  authorize_UN_RE.py  binary_search.py  check_all_rules.py  check_articles.py  check_datatype_for_classword.py  check_file_size.py  check_for_bad_characters.py  check_for_dup_include_files.py  check_for_old_business_terms.py  check_for_rule_exception.py  check_for_windows_backslash.py  check_g001.py  check_g003.py  check_g004.py  check_g005.py  check_g011.py  check_g012.py  check_r001.py  check_r002.py  check_r003.py  check_r004.py  check_r005.py  check_r006.py  check_r1000.py  check_r1001.py  check_r1002.py  check_r200.py  (+252 more)
un_re/scripts/evaluate_output/: pyproject.toml
un_re/scripts/evaluate_output/parse_logs/: __init__.py  parse_output_logs.py
(+116 files in other folders)
